window.h

typedef struct string string;
typedef struct main__WindowInfo main__WindowInfo;
main__WindowInfo *window_app_init(void *params);
// 6 Useful Developer Controls (Diff View, JSON Tree, HTTP Request Card, Terminal View, Resource Monitor, Env Vars Editor)

void *window_add_diff_view_control(main__WindowInfo *info, const char *name, const char *old_text, const char *new_text, int height);
void window_set_diff_view_text(main__WindowInfo *info, const char *name, const char *old_text, const char *new_text);
void *window_add_json_tree_control(main__WindowInfo *info, const char *name, const char *json_str, int height);
void window_set_json_tree_data(main__WindowInfo *info, const char *name, const char *json_str);
void *window_add_http_request_card_control(main__WindowInfo *info, const char *name, const char *method, const char *url, int status_code, int response_time_ms);
void window_set_http_request_card_data(main__WindowInfo *info, const char *name, const char *method, const char *url, int status_code, int response_time_ms);
void *window_add_terminal_view_control(main__WindowInfo *info, const char *name, const char *prompt_text, int height);
void window_append_terminal_line(main__WindowInfo *info, const char *name, const char *line_text, int line_type);
void window_clear_terminal(main__WindowInfo *info, const char *name);
void *window_add_resource_monitor_control(main__WindowInfo *info, const char *name, int cpu_pct, int mem_pct, int disk_pct, int net_kbps);
void window_set_resource_monitor_metrics(main__WindowInfo *info, const char *name, int cpu_pct, int mem_pct, int disk_pct, int net_kbps);
void *window_add_env_vars_control(main__WindowInfo *info, const char *name, const char *title, const char **keys, const char **values, int count);
void window_set_env_vars_data(main__WindowInfo *info, const char *name, const char **keys, const char **values, int count);
// 6 Additional Useful UI Controls (Badge Button, Command Palette, Status Banner, Pill Toggle, Color Swatch Panel, Hotkey Badge)
void *window_add_badge_button_control(main__WindowInfo *info, const char *name, const char *title, int count, const char *badge_color);
void window_set_badge_button_count(main__WindowInfo *info, const char *name, int count);
void *window_add_command_palette_control(main__WindowInfo *info, const char *name, const char *placeholder, const char *shortcut_hint);
void window_set_command_palette_text(main__WindowInfo *info, const char *name, const char *text);
void *window_add_status_banner_control(main__WindowInfo *info, const char *name, const char *title, const char *message, const char *style_type);
void window_set_status_banner_text(main__WindowInfo *info, const char *name, const char *title, const char *message, const char *style_type);
void *window_add_pill_toggle_control(main__WindowInfo *info, const char *name, const char **options, int count, int selected_index);
void window_set_pill_toggle_selected(main__WindowInfo *info, const char *name, int selected_index);
void *window_add_color_swatch_panel_control(main__WindowInfo *info, const char *name, const char **hex_colors, int count, const char *selected_color);
void window_set_color_swatch_selected(main__WindowInfo *info, const char *name, const char *hex_color);
void *window_add_hotkey_badge_control(main__WindowInfo *info, const char *name, const char *shortcut_str, const char *description);
void window_set_hotkey_badge_shortcut(main__WindowInfo *info, const char *name, const char *shortcut_str, const char *description);
// 6 New High-Utility UI Controls (Quick Action Bar, Accordion Group, Segment Distribution Bar, Tag Input Field, Status Dock, Info Callout Card)
void *window_add_quick_action_bar_control(main__WindowInfo *info, const char *name, const char **labels, const char **symbols, int count);
void window_set_quick_action_enabled(main__WindowInfo *info, const char *name, int index, int enabled);
void *window_add_accordion_group_control(main__WindowInfo *info, const char *name, const char **section_titles, int count, int expanded_index);
void window_set_accordion_expanded(main__WindowInfo *info, const char *name, int index, int expanded);
void *window_add_segment_distribution_bar_control(main__WindowInfo *info, const char *name, const char **labels, const double *values, const char **hex_colors, int count, int height);
void window_set_segment_distribution_values(main__WindowInfo *info, const char *name, const double *values, int count);
void *window_add_tag_input_field_control(main__WindowInfo *info, const char *name, const char **tags, int count);
void window_set_tag_input_tags(main__WindowInfo *info, const char *name, const char **tags, int count);
const char *window_get_tag_input_tags(main__WindowInfo *info, const char *name);
void *window_add_status_dock_control(main__WindowInfo *info, const char *name, const char *status_text, const char *dot_color, const char *count_text);
void window_set_status_dock_info(main__WindowInfo *info, const char *name, const char *status_text, const char *dot_color, const char *count_text);
void *window_add_info_callout_control(main__WindowInfo *info, const char *name, const char *title, const char *message, const char *style_type, const char *button_text);
void window_set_info_callout_text(main__WindowInfo *info, const char *name, const char *title, const char *message);
// Additional Window Control APIs
void window_set_alpha(main__WindowInfo *info, double alpha);
double window_get_alpha(main__WindowInfo *info);
void window_get_min_size(main__WindowInfo *info, int *out_w, int *out_h);
void window_get_max_size(main__WindowInfo *info, int *out_w, int *out_h);
void window_set_collection_behavior(main__WindowInfo *info, const char *behavior);
void window_set_close_button_enabled(main__WindowInfo *info, int enabled);
void window_set_minimize_button_enabled(main__WindowInfo *info, int enabled);
void window_set_zoom_button_enabled(main__WindowInfo *info, int enabled);
void window_set_content_insets(main__WindowInfo *info, int top, int left, int bottom, int right);
void window_set_tabbing_mode(main__WindowInfo *info, const char *mode);
const char *window_get_tabbing_mode(main__WindowInfo *info);
void window_set_tabbing_identifier(main__WindowInfo *info, const char *identifier);
const char *window_get_tabbing_identifier(main__WindowInfo *info);
void window_toggle_tab_bar(main__WindowInfo *info);
void window_select_next_tab(main__WindowInfo *info);
void window_select_previous_tab(main__WindowInfo *info);
void window_set_sharing_type(main__WindowInfo *info, const char *sharing);
// Appearance Override
void window_set_window_appearance(main__WindowInfo *info, const char *appearance_name);
const char *window_get_window_appearance(main__WindowInfo *info);
int window_is_system_dark_mode(main__WindowInfo *info);
// Screen Info
void window_get_screen_frame(main__WindowInfo *info, int *out_x, int *out_y, int *out_w, int *out_h);
void window_get_screen_full_frame(main__WindowInfo *info, int *out_x, int *out_y, int *out_w, int *out_h);
double window_get_screen_scale_factor(main__WindowInfo *info);
// Cursor Control
void window_set_cursor_hidden(main__WindowInfo *info, int hidden);
void window_set_cursor(main__WindowInfo *info, const char *cursor_name);
const char *window_get_cursor(main__WindowInfo *info);
void window_set_cursor_scale(main__WindowInfo *info, double scale);
double window_get_cursor_scale(main__WindowInfo *info);
void window_reset_cursor(main__WindowInfo *info);
void window_push_cursor(main__WindowInfo *info, const char *cursor_name);
void window_pop_cursor(main__WindowInfo *info);
void window_set_control_cursor_by_name(main__WindowInfo *info, const char *name, const char *cursor_name);
void window_get_mouse_location(main__WindowInfo *info, int *out_x, int *out_y);
void window_move_cursor_to(main__WindowInfo *info, int x, int y);
// Resize Indicator
void window_set_shows_resize_indicator(main__WindowInfo *info, int show);
int window_get_shows_resize_indicator(main__WindowInfo *info);
// Content Size Constraints
void window_set_content_min_size(main__WindowInfo *info, int width, int height);
void window_set_content_max_size(main__WindowInfo *info, int width, int height);
void window_get_content_min_size(main__WindowInfo *info, int *out_w, int *out_h);
void window_get_content_max_size(main__WindowInfo *info, int *out_w, int *out_h);
// Tab Count
int window_get_tab_count(main__WindowInfo *info);