simplegui/simplegui.v


fn C.window_add_diff_view_control(&WindowInfo, &u8, &u8, &u8, int) voidptr
fn C.window_set_diff_view_text(&WindowInfo, &u8, &u8, &u8)
fn C.window_add_json_tree_control(&WindowInfo, &u8, &u8, int) voidptr
fn C.window_set_json_tree_data(&WindowInfo, &u8, &u8)
fn C.window_add_http_request_card_control(&WindowInfo, &u8, &u8, &u8, int, int) voidptr
fn C.window_set_http_request_card_data(&WindowInfo, &u8, &u8, &u8, int, int)
fn C.window_add_terminal_view_control(&WindowInfo, &u8, &u8, int) voidptr
fn C.window_append_terminal_line(&WindowInfo, &u8, &u8, int)
fn C.window_clear_terminal(&WindowInfo, &u8)
fn C.window_add_resource_monitor_control(&WindowInfo, &u8, int, int, int, int) voidptr
fn C.window_set_resource_monitor_metrics(&WindowInfo, &u8, int, int, int, int)
fn C.window_add_env_vars_control(&WindowInfo, &u8, &u8, &&u8, &&u8, int) voidptr
fn C.window_set_env_vars_data(&WindowInfo, &u8, &&u8, &&u8, int)

fn C.window_add_badge_button_control(&WindowInfo, &u8, &u8, int, &u8) voidptr
fn C.window_set_badge_button_count(&WindowInfo, &u8, int)
fn C.window_add_command_palette_control(&WindowInfo, &u8, &u8, &u8) voidptr
fn C.window_set_command_palette_text(&WindowInfo, &u8, &u8)
fn C.window_add_status_banner_control(&WindowInfo, &u8, &u8, &u8, &u8) voidptr
fn C.window_set_status_banner_text(&WindowInfo, &u8, &u8, &u8, &u8)
fn C.window_add_pill_toggle_control(&WindowInfo, &u8, &&u8, int, int) voidptr
fn C.window_set_pill_toggle_selected(&WindowInfo, &u8, int)
fn C.window_add_color_swatch_panel_control(&WindowInfo, &u8, &&u8, int, &u8) voidptr
fn C.window_set_color_swatch_selected(&WindowInfo, &u8, &u8)
fn C.window_add_hotkey_badge_control(&WindowInfo, &u8, &u8, &u8) voidptr
fn C.window_set_hotkey_badge_shortcut(&WindowInfo, &u8, &u8, &u8)

// 6 New UI Controls C declarations
fn C.window_add_quick_action_bar_control(&WindowInfo, &u8, &&u8, &&u8, int) voidptr
fn C.window_set_quick_action_enabled(&WindowInfo, &u8, int, int)
fn C.window_add_accordion_group_control(&WindowInfo, &u8, &&u8, int, int) voidptr
fn C.window_set_accordion_expanded(&WindowInfo, &u8, int, int)
fn C.window_add_segment_distribution_bar_control(&WindowInfo, &u8, &&u8, &f64, &&u8, int, int) voidptr
fn C.window_set_segment_distribution_values(&WindowInfo, &u8, &f64, int)
fn C.window_add_tag_input_field_control(&WindowInfo, &u8, &&u8, int) voidptr
fn C.window_set_tag_input_tags(&WindowInfo, &u8, &&u8, int)
fn C.window_get_tag_input_tags(&WindowInfo, &u8) &u8
fn C.window_add_status_dock_control(&WindowInfo, &u8, &u8, &u8, &u8) voidptr
fn C.window_set_status_dock_info(&WindowInfo, &u8, &u8, &u8, &u8)
fn C.window_add_info_callout_control(&WindowInfo, &u8, &u8, &u8, &u8, &u8) voidptr
fn C.window_set_info_callout_text(&WindowInfo, &u8, &u8, &u8)

fn C.window_set_alpha(&WindowInfo, f64)
fn C.window_get_alpha(&WindowInfo) f64
fn C.window_get_min_size(&WindowInfo, &int, &int)
fn C.window_get_max_size(&WindowInfo, &int, &int)
fn C.window_set_collection_behavior(&WindowInfo, &u8)
fn C.window_set_close_button_enabled(&WindowInfo, int)
fn C.window_set_minimize_button_enabled(&WindowInfo, int)
fn C.window_set_zoom_button_enabled(&WindowInfo, int)
fn C.window_set_content_insets(&WindowInfo, int, int, int, int)
fn C.window_set_tabbing_mode(&WindowInfo, &u8)
fn C.window_get_tabbing_mode(&WindowInfo) &char
fn C.window_set_tabbing_identifier(&WindowInfo, &u8)
fn C.window_get_tabbing_identifier(&WindowInfo) &char
fn C.window_toggle_tab_bar(&WindowInfo)
fn C.window_select_next_tab(&WindowInfo)
fn C.window_select_previous_tab(&WindowInfo)
fn C.window_set_sharing_type(&WindowInfo, &u8)

// Appearance Override
fn C.window_set_window_appearance(&WindowInfo, &u8)
fn C.window_get_window_appearance(&WindowInfo) &char
fn C.window_is_system_dark_mode(&WindowInfo) int

// Screen Info
fn C.window_get_screen_frame(&WindowInfo, &int, &int, &int, &int)
fn C.window_get_screen_full_frame(&WindowInfo, &int, &int, &int, &int)
fn C.window_get_screen_scale_factor(&WindowInfo) f64

// Cursor Control
fn C.window_set_cursor_hidden(&WindowInfo, int)
fn C.window_set_cursor(&WindowInfo, &u8)
fn C.window_get_cursor(&WindowInfo) &u8
fn C.window_set_cursor_scale(&WindowInfo, f64)
fn C.window_get_cursor_scale(&WindowInfo) f64
fn C.window_reset_cursor(&WindowInfo)
fn C.window_push_cursor(&WindowInfo, &u8)
fn C.window_pop_cursor(&WindowInfo)
fn C.window_set_control_cursor_by_name(&WindowInfo, &u8, &u8)
fn C.window_get_mouse_location(&WindowInfo, &int, &int)
fn C.window_move_cursor_to(&WindowInfo, int, int)

// Resize Indicator
fn C.window_set_shows_resize_indicator(&WindowInfo, int)
fn C.window_get_shows_resize_indicator(&WindowInfo) int

// Content Size Constraints
fn C.window_set_content_min_size(&WindowInfo, int, int)
fn C.window_set_content_max_size(&WindowInfo, int, int)
fn C.window_get_content_min_size(&WindowInfo, &int, &int)
fn C.window_get_content_max_size(&WindowInfo, &int, &int)

// Tab Count
fn C.window_get_tab_count(&WindowInfo) int

pub type StringEventCallback = fn (mut win SimpleWindow, value string)

pub type VoidEventCallback = fn (mut win SimpleWindow)

pub type FileDropCallback = fn (mut win SimpleWindow, files []string)

pub type ControlValidator = fn (value string) string

pub struct MenuItem {
pub:
	title    string
	shortcut string
	callback VoidEventCallback = unsafe { nil }
}

pub struct WindowConfig {
pub mut:
	title                        string
	width                        int
	height                       int
	padding                      int
	spacing                      int
	background_color             string
	font_color                   string
	always_on_top                bool
	responsive_layout            bool
	resizable                    bool
	minimizable                  bool
	maximizable                  bool
	closable                     bool
	has_shadow                   bool
	movable_by_window_background bool
	titlebar_visible             bool
	title_visible                bool
}

pub struct WindowParams {
	title                        string
	width                        int
	height                       int
	win_ptr                      voidptr
	padding                      int
	spacing                      int
	always_on_top                int
	responsive_layout            int
	resizable                    int
	minimizable                  int
	maximizable                  int
	closable                     int
	has_shadow                   int
	movable_by_window_background int
	titlebar_visible             int
	title_visible                int
}

pub struct WindowInfo {
	app          voidptr
	app_delegate voidptr
}

@[heap]
pub struct SimpleWindow {
mut:
	window_info                  &WindowInfo = unsafe { nil }
	width                        int
	height                       int
	title                        string
	controls                     []ControlEntry
	status_text                  string
	handlers                     []ControlEventHandler
	background_color             string
	font_color                   string
	padding                      int
	spacing                      int
	always_on_top                bool
	responsive_layout            bool = true
	placeholders                 map[string]string
	tooltips                     map[string]string
	errors                       map[string]string
	default_button               string
	debug_mode                   bool
	last_control                 string
	min_width                    int
	min_height                   int
	max_width                    int
	max_height                   int
	resizable                    bool = true
	minimizable                  bool = true
	maximizable                  bool = true
	closable                     bool = true
	has_shadow                   bool = true
	movable_by_window_background bool
	titlebar_visible             bool = true
	title_visible                bool = true
	subtitle                     string
	corner_radius                f64
	vibrancy_material            string
	window_level                 string = 'normal'
	movable                      bool   = true
	ignores_mouse_events         bool
	hides_on_deactivate          bool
	prevents_app_termination     bool = true
	represented_filename         string
	frame_autosave_name          string
	document_edited              bool
	titlebar_appears_transparent bool
	full_size_content_view       bool
	background_blur              bool
	list_items                   map[string][]string
	tree_nodes                   map[string][]TreeNode
	table_rows                   map[string][][]string
	grid_rows                    map[string][][]string
	grid_headers                 map[string][]string
pub mut:
	ws_client voidptr = unsafe { nil }
}

struct ControlEntry {
mut:
	name             string
	kind             string
	label            string
	value            string
	checked          bool
	number           int
	background_color string
	font_color       string
	width            int
	height           int
	font_size        int
	visible          bool = true
	enabled          bool = true
	initial_value    string
	initial_checked  bool
	initial_number   int
	placeholder      string
	error_text       string
	alignment        string
	expand_fill      bool
}

struct ControlEventHandler {
mut:
	control_name string
	event_name   string
	filter_value string
	string_cb    StringEventCallback = unsafe { nil }
	void_cb      VoidEventCallback   = unsafe { nil }
	file_drop_cb FileDropCallback    = unsafe { nil }
}

// new_simple_window creates and initializes a new SimpleWindow instance.
pub fn new_simple_window(title string, width int, height int) &SimpleWindow {
	mut win := &SimpleWindow{
		width:                        width
		height:                       height
		title:                        title
		responsive_layout:            true
		resizable:                    true
		minimizable:                  true
		maximizable:                  true
		closable:                     true
		has_shadow:                   true
		movable_by_window_background: false
	}
	win.placeholders = map[string]string{}
	win.tooltips = map[string]string{}
	win.errors = map[string]string{}
	win.tree_nodes = map[string][]TreeNode{}
	win.grid_rows = map[string][][]string{}
	win.grid_headers = map[string][]string{}
	win.ensure_window()
	return win
}

// ensure_window performs ensure window.
fn (win &SimpleWindow) ensure_window() {
	if win.window_info == unsafe { nil } {
		params := WindowParams{
			title:                        win.title
			width:                        win.width
			height:                       win.height
			win_ptr:                      win
			padding:                      win.padding
			spacing:                      win.spacing
			always_on_top:                if win.always_on_top { 1 } else { 0 }
			responsive_layout:            if win.responsive_layout { 1 } else { 0 }
			resizable:                    if win.resizable { 1 } else { 0 }
			minimizable:                  if win.minimizable { 1 } else { 0 }
			maximizable:                  if win.maximizable { 1 } else { 0 }
			closable:                     if win.closable { 1 } else { 0 }
			has_shadow:                   if win.has_shadow { 1 } else { 0 }
			movable_by_window_background: if win.movable_by_window_background { 1 } else { 0 }
			titlebar_visible:             if win.titlebar_visible { 1 } else { 0 }
			title_visible:                if win.title_visible { 1 } else { 0 }
		}
		unsafe {
			mut w := &SimpleWindow(win)
			w.window_info = C.window_app_init(&params)
		}
	}
}

// has_control performs has control.
pub fn (win &SimpleWindow) has_control(name string) bool {
	return win.find_control(name) >= 0
}

// list_controls performs list controls.
pub fn (win &SimpleWindow) list_controls() []string {
	mut names := []string{}
	for control in win.controls {
		names << control.name
	}
	return names
}
